k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: internship
  creationTimestamp: null
  labels:
    name: nadah
  name: nadah-internship
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: nadah-internship
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: nadah-internship
    spec:
      containers:
      - name: nadah-internship
        image: docker.et3.co/internship.nadah:latest
        command: ["sh"]
        args: ["runserver.sh"]
        volumeMounts:
        - mountPath: /usr/src/app/data
          name: nadah-internship-volume-mount
        - mountPath: /usr/src/media
          name: nadah-media-internship-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nadah-internship-volume-mount
        persistentVolumeClaim:
          claimName: nadah-internship-pvc
      - name: nadah-media-internship-volume-mount
        persistentVolumeClaim:
          claimName: nadah-media-internship-pvc
