k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nadah-internship
  namespace: internship
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    service: nadah-internship
spec:
  tls:
  - hosts:
    - neqabty.et3.co
    secretName: neqabty.et3.co-cert
  rules:
  - host: neqabty.et3.co
    http:
      paths:
      - path: /
        backend:
          serviceName: nadah-internship
          servicePort: 8002
      - path: /media
        backend:
          serviceName: nadah-media-internship
          servicePort: 80
